# Truecaller

./: .replit  bot.py  config.env  keep_alive.py  last_player_ranks.json  lp_history.json  pyproject.toml  ranking.json  ranking_state.json  render.yaml  replit.nix  sync_to_github.py  update_riot_key.py
.github/workflows/: deploy.yml
bot/: ranking_state.json
web/: index.html  ranking.json  tests_json.py  web_server.py
