[tool.poetry]
name = "lol-bot-discord"
version = "0.1.0"
description = "Bot Discord pour suivre les rangs League of Legends"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
flask = "^2.2.2"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"